# LinuxFoundation-Leaderboards-Analysis

./: README.md  analysis.py  index.html  pyproject.toml  scraper.py
.github/workflows/: static.yml
datasets/: active-contributors_full.json  active-organizations_full.json  codebase-size_full.json  commit-activity_full.json  contributors_full.json  fastest-mergers_full.json  fastest-responders_full.json  focused-teams_full.json  organizations_full.json  resolution-rate_full.json  small-teams-massive-output_full.json
datastory/: PROMPTS.md  index.html  report_data.json
datastory/animated-style/: index.html
datastory/chhota-bheem-style/: index.html
datastory/malcolm-gladwell-style/: index.html
datastory/polygraph-style/: index.html
datastory/shirley-wu-style/: index.html
datastory/wall-street-journal-style/: index.html
